# dfterm2

./: CMakeLists.txt  FindICU.cmake  FindNcursesw.cmake  dfterm2.conf.win
debian/: README.Debian  README.source  changelog  control  copyright  dfterm2.cron.d.ex  dfterm2.default.ex  dfterm2.doc-base.EX  dfterm2.substvars  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/patches/: Added-.dfterm2-conf-directory-in-home-folder  Cleanup  Modified-CMakeLists  Removed-conf-dir-from-cmake  series
debian/source/: include-binaries
docs/: install_manifest.txt
src/: dfterm2_configure.cc  hash.cc  interface_ncurses.cc  logger.cc  main.cc
